<resources>
    <string name="app_name">urUW</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_home">Home</string>
    <string name="title_parking">Parking</string>
    <string name="title_classPlan">Class Plan</string>
    <string name="title_campusMap">Campus Map</string>

    <!-- Campus map -->
    <string name="ClickToCampusMap">Click Here To Open In Browser</string>

    <!-- About page -->
    <string name="Developer3_info">Name: Junghyon Jo Email: whwheoeo@uw.edu</string>
    <string name="Developer2_info">Name: Edward Chung Email: edward92@uw.edu</string>
    <string name="Developer1_info">Name: Tu Phan Email: dinhtu@uw.edu</string>
    <string name="About_Information">This application goes through some of the basic information to guide freshman students in CS majors at University of Washington Tacoma.</string>

    <!-- Buttons -->
    <string name="Class_button">Class plan</string>
    <string name="Map_button">Campus Map</string>
<<<<<<< HEAD

    <!-- Class Plan -->
    <string name="To_Apply">To Apply</string>
    <string name="To_Graduate">To Graduate</string>
=======
    <!-- Class Plan >-->
    <string name="To_Apply">Apply Information</string>
    <string name="To_Graduate">Graduate Information</string>
    <string name="To_Add_Quarter">Add Quarter</string>
    <string name="To_Display_Quarter">Show whole Quarter</string>
>>>>>>> main
    <string name="Class_Plan">Class Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_Add_Course_hint">Add Your Course</string>
    <string name="button_ADD">Add</string>
    <string name="edit_Delete_Course_hint">Delete Your Course</string>
    <string name="edit_ADD_Year_hint">Add your Year</string>
    <string name="button_Delete">Delete</string>
    <string name="Fresh_button">Fresh man</string>
    <string name="Transfer_button">Transfer student</string>
    <string name="Graduation_button">Graduation</string>

    <!-- Additional strings from main branch -->
    <string name="login_text">LOGIN</string>
    <string name="register_navigate_text">Click here to Register!</string>
    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="register_text">REGISTER</string>
    <string name="LOGIN_PREFS">edu.tacoma.uw.whwheoeo.authenticationpractice.PREFS</string>
    <string name="LOGGEDIN">edu.tacoma.uw.whwheoeo.authenticationpractice.PREFS</string>
    <string name="logout">Logout</string>
</resources>
