<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_gravity="end"
        android:text="@string/login_text" />

    <TextView
        android:id="@+id/register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/register_navigate_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_login_textview"
        android:textColor="@color/design_default_color_error"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
