<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassPlanActivity">

    <Button
        android:id="@+id/ApplyButton"
        android:layout_width="209dp"
        android:layout_height="85dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="66dp"
        android:text="@string/To_Apply"
        app:layout_constraintBottom_toTopOf="@+id/GraduationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GraduationButton"
        android:layout_width="218dp"
        android:layout_height="77dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="83dp"
        android:text="@string/To_Graduate"
        app:layout_constraintBottom_toTopOf="@+id/myPlanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApplyButton" />

    <Button
        android:id="@+id/myPlanButton"
        android:layout_width="202dp"
        android:layout_height="69dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="211dp"
        android:text="@string/To_Add_Quarter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GraduationButton" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="326dp"
        android:layout_height="192dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/ApplyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/course" />


</androidx.constraintlayout.widget.ConstraintLayout>